fixed alignment issues

--- a/src/styles/WidgetList.css
+++ b/src/styles/WidgetList.css
@@ -6,9 +6,7 @@
 
 /*Added Later*/
 .widgetContainerStyle {
-    border: solid;
     borderWidth: thin;
-    width:1000px;
     borderColor: gray;
     borderRadius: 3px
 }
